Revert to commit c778ce0
Commit c778ce0 (Create PlayerSwapHandItemsListener.java) by @not-coded